--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "rd-training-client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GeorgeBatt-SV/rd-training-client.git"
-  },
-  "author": "George Batt",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/GeorgeBatt-SV/rd-training-client/issues"
-  },
-  "homepage": "https://github.com/GeorgeBatt-SV/rd-training-client#readme"
+    "name": "rd-training-client",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/GeorgeBatt-SV/rd-training-client.git"
+    },
+    "author": "George Batt",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/GeorgeBatt-SV/rd-training-client/issues"
+    },
+    "homepage": "https://github.com/GeorgeBatt-SV/rd-training-client#readme",
+    "dependencies": {
+        "@simpleview/sv-graphql-client": "^4.0.0"
+    }
 }
