--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "style": "eslint . --config .eslintrc.js"
     },
     "repository": {
         "type": "git",
@@ -17,7 +18,8 @@
     },
     "homepage": "https://github.com/GeorgeBatt-SV/rd-training-client#readme",
     "dependencies": {
-        "@simpleview/sv-graphql-client": "^4.0.0",
-        "graphql": "^16.8.1"
+        "@simpleview/sv-graphql-client": "4.0.0",
+        "eslint": "8.56.0",
+        "graphql": "16.8.1"
     }
 }
