--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "homepage": "https://github.com/GeorgeBatt-SV/rd-training-client#readme",
     "dependencies": {
         "@simpleview/sv-graphql-client": "4.0.0",
-        "eslint": "8.56.0",
-        "graphql": "16.8.1"
+        "eslint": "8.56.0"
     }
 }
